added JsonPreview component, improved checkboxing functionality

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -34,3 +34,8 @@ input{
     height: 100vh;
     overflow-y: scroll;
 }
+.JsonPreview{
+    position: absolute;
+    right: 200px;
+    top: 200px;
+}
