--- a/src/css/main.css
+++ b/src/css/main.css
@@ -38,4 +38,10 @@ input {
   height: 100vh;
   overflow-y: scroll;
 }
+
+.JsonPreview {
+  position: absolute;
+  right: 200px;
+  top: 200px;
+}
 /*# sourceMappingURL=main.css.map */
