--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -5,6 +5,7 @@ body{
 
 ul{
     padding: 15px 7px;
+    margin: 0; 
 }
 
 .list--category{
@@ -33,9 +34,4 @@ input{
     padding: 0;
     height: 100vh;
     overflow-y: scroll;
-}
-.JsonPreview{
-    position: absolute;
-    right: 200px;
-    top: 200px;
 }
