--- a/src/css/components/jsonPreview.scss
+++ b/src/css/components/jsonPreview.scss
@@ -1,5 +1,5 @@
 
-.JsonPreview{
+.jsonPreview{
     height: 100vh;
     position: absolute;
     right: 0px;
@@ -11,10 +11,23 @@
     padding: 5px;
     background-color: rgb(226, 226, 226);
     overflow-y: scroll;
+    width: 300px;
+}
+.jsonPreviewContainer{
+    margin-left: 15px;
+    width: 260px;
+    position: absolute;
+    top: 50px;    
+    padding-bottom: 50px;
 }
 .category{
     margin-left: 15px;
-    width: 260px;
+    // width: 260px;
+    // position: absolute;
+    // top: 50px;
+}
+.jsonPreviewContent{
+    display: inline;
 }
 .jsonPreview--ul, .jsonPreview--subcategory, .jsonPreview--listitem{
     margin: 0;
