--- a/src/css/components/jsonPreview.css
+++ b/src/css/components/jsonPreview.css
@@ -20,6 +20,16 @@
   width: 300px;
 }
 
+.headline {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 16px;
+  font-weight: 600;
+  border-bottom: 3px solid;
+  color: #6b6b6b;
+}
+
 .jsonPreviewContainer {
   margin-left: 15px;
   width: 260px;
