--- a/src/css/components/jsonPreview.scss
+++ b/src/css/components/jsonPreview.scss
@@ -13,6 +13,15 @@
     overflow-y: scroll;
     width: 300px;
 }
+.headline{
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 16px;
+    font-weight: 600;
+    border-bottom: 3px solid;
+    color: rgb(107, 107, 107);
+}
 .jsonPreviewContainer{
     margin-left: 15px;
     width: 260px;
