--- a/src/css/components/jsonPreview.scss
+++ b/src/css/components/jsonPreview.scss
@@ -22,11 +22,29 @@
     border-bottom: 3px solid;
     color: rgb(107, 107, 107);
 }
+.imageBox{
+    border: 1px solid;
+    display: flex;
+    flex-direction: column;
+    padding: 20px 5px 0;
+    position: absolute;
+    top: 50px;
+    width: calc(100% - 10px);
+}
+.uploadPreview{
+    height: 200px;
+    min-width: 150px;
+    max-width: 250px;
+    object-fit: contain;
+    background-color: rgb(223, 223, 223);
+    margin: auto;
+    margin-bottom: 20px;
+}
 .jsonPreviewContainer{
     margin-left: 15px;
     width: 260px;
     position: absolute;
-    top: 50px;    
+    top: 380px;    
     padding-bottom: 50px;
 }
 .category{
