--- a/src/css/components/imageInfo.css
+++ b/src/css/components/imageInfo.css
@@ -1,20 +1,36 @@
 .imageInfo {
-  height: 100vh;
-  width: 300px;
-  position: absolute;
-  left: 300px;
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  grid-column-end: 2;
+  -ms-grid-row: 2;
+      grid-row-start: 2;
+  grid-row-end: 3;
+}
+
+.imageInfo--section {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border: 1px solid;
+  padding: 20px 0;
 }
 
 .imageInfo--box {
-  height: 30px;
-  width: 400px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  margin: 0 70px;
   position: relative;
+  padding: 5px 0;
+  border-bottom: 2px dotted;
 }
 
 .imageInfo--fileUpload {
@@ -24,8 +40,14 @@
 }
 
 .themeSelector {
-  top: 120px;
-  left: 300px;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
 }
 
 .themelist {
@@ -35,5 +57,26 @@
 
 .themelist__display {
   display: initial;
+}
+
+.themes-list {
+  position: relative;
+  width: 200px;
+  border-bottom: 1px solid;
+  height: 30px;
+}
+
+.themes-span {
+  position: absolute;
+  left: 10px;
+}
+
+.themes-checkbox {
+  position: absolute;
+  right: 0;
+}
+
+.themeSelector > ul {
+  background-color: #ffeaee;
 }
 /*# sourceMappingURL=imageInfo.css.map */
