--- a/src/css/components/jsonPreview.css
+++ b/src/css/components/jsonPreview.css
@@ -1,8 +1,12 @@
 .jsonPreview {
   height: 100vh;
-  position: absolute;
-  right: 0px;
-  top: 0px;
+  width: 300px;
+  -ms-grid-column: 2;
+      grid-column-start: 2;
+  grid-column-end: 3;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+  grid-row-end: 3;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -10,24 +14,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   border: 1px solid;
-  padding: 5px;
   background-color: #e2e2e2;
   overflow-y: scroll;
-  width: 300px;
-}
-
-.headline {
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  font-size: 16px;
-  font-weight: 600;
-  border-bottom: 3px solid;
-  color: #6b6b6b;
 }
 
 .imageBox {
@@ -40,9 +29,7 @@
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 20px 5px 0;
-  position: absolute;
-  top: 50px;
-  width: calc(100% - 10px);
+  width: 270px;
 }
 
 .uploadPreview {
@@ -59,7 +46,6 @@
 .jsonPreviewContainer {
   margin-left: 15px;
   width: 260px;
-  position: absolute;
   top: 380px;
   padding-bottom: 50px;
 }
