--- a/src/css/components/jsonPreview.scss
+++ b/src/css/components/jsonPreview.scss
@@ -1,35 +1,34 @@
 
 .jsonPreview{
     height: 100vh;
-    position: absolute;
-    right: 0px;
-    top: 0px;
+    width: 300px;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     border: 1px solid;
-    padding: 5px;
+    // padding: 5px;
     background-color: rgb(226, 226, 226);
     overflow-y: scroll;
-    width: 300px;
 }
-.headline{
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    font-size: 16px;
-    font-weight: 600;
-    border-bottom: 3px solid;
-    color: rgb(107, 107, 107);
-}
+// .headline{
+//     // position: absolute;
+//     // top: 10px;
+//     // right: 20px;
+//     // font-size: 16px;
+//     // font-weight: 600;
+//     // border-bottom: 3px solid;
+//     // color: rgb(107, 107, 107);
+// }
 .imageBox{
     border: 1px solid;
     display: flex;
     flex-direction: column;
     padding: 20px 5px 0;
-    position: absolute;
-    top: 50px;
-    width: calc(100% - 10px);
+    // position: absolute;
+    width: 270px;
 }
 .uploadPreview{
     height: 200px;
@@ -43,7 +42,7 @@
 .jsonPreviewContainer{
     margin-left: 15px;
     width: 260px;
-    position: absolute;
+    // position: absolute;
     top: 380px;    
     padding-bottom: 50px;
 }
