--- a/src/css/components/imageInfo.scss
+++ b/src/css/components/imageInfo.scss
@@ -22,6 +22,7 @@
     position: relative;
     padding: 5px 0;
     border-bottom: 2px dotted;
+    align-items: center;
 }
 .imageInfo--fileUpload{
     width: 85px;
@@ -35,8 +36,10 @@
     // position: absolute;
     position: relative;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
+    max-width: 678px;
 }
 .themelist{
     height: 400px;
@@ -62,5 +65,6 @@
 
 .themeSelector > ul {
     background-color: rgb(255, 234, 238);
+    flex: 1;
 }
 
