--- a/src/css/components/jsonPreview.css
+++ b/src/css/components/jsonPreview.css
@@ -30,6 +30,7 @@
           flex-direction: column;
   padding: 20px 5px 0;
   width: 270px;
+  margin-left: 5px;
 }
 
 .uploadPreview {
@@ -88,5 +89,16 @@
   font-weight: initial;
   color: dimgray;
   font-size: 16px;
+}
+
+.preview-themes {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.preview-themes > ul {
+  padding: 0;
+  margin-left: 30px;
 }
 /*# sourceMappingURL=jsonPreview.css.map */
