--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  white-space: nowrap;
 }
 
 body {
@@ -10,6 +11,7 @@ body {
 ul {
   padding: 15px 7px;
   margin: 0;
+  white-space: nowrap;
 }
 
 .container {
@@ -39,5 +41,30 @@ h3 {
 
 h5 {
   padding-left: 60px;
+}
+
+.container-radio {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 12px;
+  width: 50px;
+}
+
+.container-radio > input {
+  margin: 0;
+}
+
+form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 /*# sourceMappingURL=main.css.map */
