--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,6 +1,7 @@
 *{
     margin:0;
     padding: 0;
+    white-space: nowrap;
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
@@ -9,6 +10,7 @@ body{
 ul{
     padding: 15px 7px;
     margin: 0; 
+    white-space: nowrap;
 }
 .container{
     position: relative;
@@ -61,3 +63,17 @@ h5{
 //     height: 100vh;
 //     overflow-y: scroll;
 // }
+
+.container-radio{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 12px;
+    width: 50px;
+}
+.container-radio > input{
+    margin: 0;
+}
+form{
+    display: flex;
+}
