--- a/src/css/components/imageInfo.css
+++ b/src/css/components/imageInfo.css
@@ -49,11 +49,7 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   width: 100%;
-  max-width: 678px;
 }
 
 .themelist {
@@ -69,12 +65,16 @@
   position: relative;
   width: 200px;
   border-bottom: 1px solid;
-  height: 30px;
+  height: 22px;
 }
 
 .themes-span {
   position: absolute;
   left: 10px;
+  height: 30px;
+  overflow: hidden;
+  width: 150px;
+  font-size: 12px;
 }
 
 .themes-checkbox {
