--- a/src/css/components/imageInfo.scss
+++ b/src/css/components/imageInfo.scss
@@ -37,9 +37,9 @@
     position: relative;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    // justify-content: space-between;
     width: 100%;
-    max-width: 678px;
+    // max-width: 678px;
 }
 .themelist{
     height: 400px;
@@ -52,11 +52,15 @@
     position: relative;
     width: 200px;
     border-bottom: 1px solid;
-    height: 30px;
+    height: 22px;
 }
 .themes-span{
     position: absolute;
     left: 10px;
+    height: 30px;
+    overflow: hidden;
+    width: 150px;
+    font-size: 12px;
 }
 .themes-checkbox{
     position: absolute;
