--- a/src/css/components/jsonPreview.css
+++ b/src/css/components/jsonPreview.css
@@ -91,14 +91,25 @@
   font-size: 16px;
 }
 
-.preview-themes {
+.preview-list-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.preview-themes > ul {
+.preview--list {
   padding: 0;
   margin-left: 30px;
+}
+
+.preview-container {
+  border-bottom: 1px solid #a5a5a5;
+  white-space: normal;
+  font-size: 12px;
+}
+
+.preview-span {
+  font-weight: 600;
+  font-size: 14px;
 }
 /*# sourceMappingURL=jsonPreview.css.map */
