--- a/src/css/main.css
+++ b/src/css/main.css
@@ -55,7 +55,7 @@ h5 {
       -ms-flex-align: center;
           align-items: center;
   font-size: 12px;
-  width: 50px;
+  margin-right: 20px;
 }
 
 .container-radio > input {
