--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -36,40 +36,12 @@ h5{
     padding-left: 60px;
 }
 
-// .list--category{
-//     background-color: #808e95;
-//     text-transform: uppercase;
-//     font-size: 24px;
-//     font-weight: bold;
-// }
-// .list--subcategory{
-//     background-color: #b0bec5;
-//     font-size: 14px;
-// }
-// .list--listitem{
-//     background-color: #e2f1f8;
-//     font-size: 12px;
-// }
-// input{
-//     margin-right: 20px;
-// }
-// .container{
-//     width: 300px;
-//     position: absolute;
-//     left: 0;
-//     top: 0;
-//     margin: 0;
-//     padding: 0;
-//     height: 100vh;
-//     overflow-y: scroll;
-// }
-
 .container-radio{
     display: flex;
     flex-direction: column;
     align-items: center;
     font-size: 12px;
-    width: 50px;
+    margin-right: 20px;
 }
 .container-radio > input{
     margin: 0;
