added a router to familySetup, it works

--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -49,3 +49,14 @@ h5{
 form{
     display: flex;
 }
+.subtitle{
+    font-size: 12px;
+    color: rgb(165, 165, 165);
+}
+
+p{
+    margin: 0 !important;
+}
+.no-padding{
+    padding: 0;
+}
