--- a/client/src/css/components/imageInfo.css
+++ b/client/src/css/components/imageInfo.css
@@ -50,6 +50,7 @@
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   width: 100%;
+  padding: 7px;
 }
 
 .themelist {
@@ -84,8 +85,5 @@
 
 .themeSelector > ul {
   background-color: #ffeaee;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
 }
 /*# sourceMappingURL=imageInfo.css.map */
