--- a/client/src/css/components/imageInfo.scss
+++ b/client/src/css/components/imageInfo.scss
@@ -39,6 +39,7 @@
     flex-wrap: wrap;
     // justify-content: space-between;
     width: 100%;
+    padding: 7px;
     // max-width: 678px;
 }
 .themelist{
@@ -69,6 +70,7 @@
 
 .themeSelector > ul {
     background-color: rgb(255, 234, 238);
-    flex: 1;
+    // flex: 1;
+    
 }
 
