--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -67,4 +67,17 @@ form {
   display: -ms-flexbox;
   display: flex;
 }
+
+.subtitle {
+  font-size: 12px;
+  color: #a5a5a5;
+}
+
+p {
+  margin: 0 !important;
+}
+
+.no-padding {
+  padding: 0;
+}
 /*# sourceMappingURL=main.css.map */
