--- a/client/src/css/components/extendedList.css
+++ b/client/src/css/components/extendedList.css
@@ -11,14 +11,12 @@
 }
 
 .button-extend {
-  width: 50px;
-  height: 30px;
   margin-right: 20px;
 }
 
 .icon--chevron {
-  height: 30px !important;
-  width: 30px !important;
+  height: 18x !important;
+  width: 18px !important;
 }
 
 .icon-rotate {
