--- a/client/src/css/components/extendedList.scss
+++ b/client/src/css/components/extendedList.scss
@@ -9,13 +9,13 @@
     right: 0;
 }
 .button-extend{
-    width: 50px;
-    height: 30px;
+    width: 50px !important;
+    // height: 30px;
     margin-right: 20px;
 }
 .icon--chevron{
-    height: 30px !important;
-    width: 30px !important;
+    height: 18x !important;
+    width: 18px !important;
     // margin-right: 20px;
 }
 // .icon:hover{
