--- a/client/src/css/components/imageInfo.scss
+++ b/client/src/css/components/imageInfo.scss
@@ -18,10 +18,10 @@
     // width: 400px;
     display: flex;
     justify-content: space-between;
-    margin: 0 70px;
+    margin: 0 5vw;
     position: relative;
     padding: 5px 0;
-    border-bottom: 2px dotted;
+    border-bottom: 1px dotted;
     align-items: center;
 }
 .imageInfo--fileUpload{
@@ -39,7 +39,7 @@
     flex-wrap: wrap;
     // justify-content: space-between;
     width: 100%;
-    padding: 7px;
+    // padding: 7px;
     // max-width: 678px;
 }
 .themelist{
