--- a/client/src/css/components/extendedList.scss
+++ b/client/src/css/components/extendedList.scss
@@ -11,7 +11,7 @@
 .button-extend{
     width: 50px !important;
     // height: 30px;
-    margin-right: 20px;
+    // margin-right: 20px;
 }
 .icon--chevron{
     height: 18x !important;
