fixed SEND TO DATABASE function

--- a/client/src/css/components/jsonPreview.css
+++ b/client/src/css/components/jsonPreview.css
@@ -112,4 +112,8 @@
   font-weight: 600;
   font-size: 14px;
 }
+
+.whiteSpace--break {
+  white-space: normal;
+}
 /*# sourceMappingURL=jsonPreview.css.map */
