css update for mobile width

--- a/client/src/css/components/extendedList.scss
+++ b/client/src/css/components/extendedList.scss
@@ -1,10 +1,10 @@
 .extendedList--form{
-    position: relative;
+    // position: relative;
     width: 100%;
     border: none !important;
 }
 .extendedList--form > form{
-    position: absolute;
+    // position: absolute;
     top: 5px;
     right: 0;
 }
