--- a/client/src/css/components/imageInfo.scss
+++ b/client/src/css/components/imageInfo.scss
@@ -23,6 +23,7 @@
     padding: 5px 0;
     border-bottom: 1px dotted;
     align-items: center;
+    flex-wrap: wrap;
 }
 .imageInfo--fileUpload{
     width: 85px;
