--- a/client/src/css/components/jsonPreview.scss
+++ b/client/src/css/components/jsonPreview.scss
@@ -1,6 +1,6 @@
 
 .jsonPreview{
-    height: 100vh;
+    height: calc(100vh - 100px);
     width: 300px;
     grid-column-start: 2;
     grid-column-end: 3;
