--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -1,7 +1,7 @@
 *{
     margin:0;
     padding: 0;
-    white-space: nowrap;
+    white-space: normal;
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
