css fix for extendList

--- a/client/src/css/components/imageInfo.scss
+++ b/client/src/css/components/imageInfo.scss
@@ -38,7 +38,7 @@
     position: relative;
     display: flex;
     flex-wrap: wrap;
-    // justify-content: space-between;
+    justify-content: center;
     width: 100%;
     // padding: 7px;
     // max-width: 678px;
