--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -80,4 +80,27 @@ p {
 .no-padding {
   padding: 0;
 }
+
+Button {
+  margin-top: 3px;
+}
+
+.dnd-image {
+  height: 150px;
+  width: 150px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: center;
+     object-position: center;
+  border: 1px solid black;
+  background-color: #ffffff;
+  margin: 0 15px;
+}
+
+.dnd-list {
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
 /*# sourceMappingURL=main.css.map */
