--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -60,3 +60,22 @@ p{
 .no-padding{
     padding: 0;
 }
+Button{
+    margin-top: 3px;
+}
+.dnd-image{
+    height: 150px;
+    width: 150px;
+    object-fit: contain;
+    object-position: center;
+    border: 1px solid black;
+    background-color: #ffffff;
+    margin: 0 15px;
+}
+.dnd-listItem{
+
+}
+.dnd-list{
+    list-style-type:none;
+    display: flex;
+}
