--- a/client/src/components/dragAndDrop/css/dragAndDrop.css
+++ b/client/src/components/dragAndDrop/css/dragAndDrop.css
@@ -1,20 +1,18 @@
 .filesList{
     display:flex;
-    /* flex-wrap: wrap; */
-    max-width: 610px;
     background-color: rgb(255, 255, 130);
     height: 150px;
 }
 .fileContainer{
     height: 100%;
-    max-width: 25%;
     position: relative;
-    flex: 0 0 150px;
+    flex: 1 1 25%;
 }
 .file{
     height: calc(100% - 30px);
     width: 100%;
     object-fit: contain;
+    object-position: bottom;
     border: 1px solid black;
     background-color: white;
 }
