--- a/client/src/components/DragAndDropList/css/ImagesPreview.scss
+++ b/client/src/components/DragAndDropList/css/ImagesPreview.scss
@@ -33,9 +33,11 @@
     background-color: rgb(252, 252, 252);
 }
 .ImagesPreview--index{
-    height: 36px;
-    width: 36px;
+    height: 26px;
+    width: 26px;
     border-radius: 999px;
+    text-align: center;
+    padding-top: 2px;
     background-color: rgb(255, 255, 142);
 }
 
