--- a/client/src/components/DragAndDropList/css/ImagesPreview.css
+++ b/client/src/components/DragAndDropList/css/ImagesPreview.css
@@ -46,7 +46,6 @@
 }
 
 .ImagesPreview--image {
-  height: 150px;
   width: 150px;
   -o-object-fit: contain;
      object-fit: contain;
@@ -75,5 +74,21 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.ImagesPreview--dragHandle {
+  height: 30px;
+  width: 49px;
+  background-color: yellow;
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+  padding-top: 4px;
+  border-radius: 5px;
+  border: 1px solid;
+}
+
+.mouseDown {
+  background-color: lime;
 }
 /*# sourceMappingURL=ImagesPreview.css.map */
