--- a/client/src/components/DragAndDropList/css/ImagesPreview.css
+++ b/client/src/components/DragAndDropList/css/ImagesPreview.css
@@ -25,6 +25,7 @@
   padding: 5px;
   margin-bottom: 15px;
   background-color: #ececec;
+  position: relative;
 }
 
 .ImagesPreview--imageContainer {
@@ -76,19 +77,62 @@
           align-items: center;
 }
 
-.ImagesPreview--dragHandle {
+.custom-button {
   height: 30px;
-  width: 49px;
-  background-color: yellow;
+  width: 100%;
   text-align: center;
   font-size: 14px;
   font-weight: bold;
   padding-top: 4px;
   border-radius: 5px;
-  border: 1px solid;
+  border: 2px solid #9e9e9e;
+  text-transform: uppercase;
+  background-color: #d1d1d1;
+}
+
+.ImagesPreview--dragHandle {
+  background-color: yellow;
+  border: 1px solid black;
 }
 
 .mouseDown {
   background-color: lime;
+}
+
+.accordion {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.card-body {
+  padding: 0;
+}
+
+.image-index-box {
+  padding: 0 10px;
+}
+
+.accordion-container {
+  width: 100%;
+}
+
+.card-header {
+  padding: 0;
+}
+
+.button-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-left: 5px;
 }
 /*# sourceMappingURL=ImagesPreview.css.map */
