--- a/client/src/components/DragAndDropList/css/ImagesPreview.scss
+++ b/client/src/components/DragAndDropList/css/ImagesPreview.scss
@@ -12,6 +12,7 @@
     padding: 5px;
     margin-bottom: 15px;
     background-color: rgb(236, 236, 236);
+    position: relative;
 }
 .ImagesPreview--imageContainer{
     display: flex;
@@ -46,17 +47,51 @@
     justify-content: space-between;
     align-items: center;
 }
-.ImagesPreview--dragHandle{
+.custom-button{
         height: 30px; 
-        width: 49px; 
-        background-color:yellow;
+        width: 100%;
         text-align: center;
         font-size: 14px;
         font-weight: bold;
         padding-top: 4px;
         border-radius: 5px;
-        border: 1px solid;
+        border: 2px solid rgb(158, 158, 158);
+        text-transform: uppercase;
+        background-color: rgb(209, 209, 209);
     }
+.ImagesPreview--dragHandle{
+    background-color: yellow;
+    border: 1px solid black;
+}
 .mouseDown{
     background-color: lime;
 }
+.accordion{
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+.card-body{
+    padding: 0;
+}
+.image-index-box{
+    padding: 0 10px;
+}
+.accordion-container{
+    width: 100%;
+}
+.card-header{
+    padding: 0;
+}
+.button-container{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 5px;
+}
+// .custom-button{
+//     width: "100%";
+//     text-transform:"uppercase";
+
+//     }
