--- a/client/src/components/DragAndDropList/css/imageInfo.scss
+++ b/client/src/components/DragAndDropList/css/imageInfo.scss
@@ -12,13 +12,13 @@
     padding: 20px 0;
 }
 
-.imageInfo--box{
+.DnD-imageInfo--box{
     // display: inline;
     // height: 30px;
     // width: 400px;
     display: flex;
     justify-content: space-between;
-    margin: 0 5vw;
+    margin: 0 10px;
     position: relative;
     padding: 5px 0;
     border-bottom: 1px dotted;
