--- a/client/src/components/DragAndDropList/css/imageInfo.css
+++ b/client/src/components/DragAndDropList/css/imageInfo.css
@@ -20,14 +20,14 @@
   padding: 20px 0;
 }
 
-.imageInfo--box {
+.DnD-imageInfo--box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin: 0 5vw;
+  margin: 0 10px;
   position: relative;
   padding: 5px 0;
   border-bottom: 1px dotted;
