dnd list style update

--- a/client/src/components/DragAndDropList/css/imageInfo.scss
+++ b/client/src/components/DragAndDropList/css/imageInfo.scss
@@ -13,12 +13,9 @@
 }
 
 .DnD-imageInfo--box{
-    // display: inline;
-    // height: 30px;
-    // width: 400px;
     display: flex;
     justify-content: space-between;
-    margin: 0 10px;
+    margin: 0;
     position: relative;
     padding: 5px 0;
     border-bottom: 1px dotted;
