--- a/client/src/components/DragAndDropList/css/imageInfo.css
+++ b/client/src/components/DragAndDropList/css/imageInfo.css
@@ -27,7 +27,7 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin: 0 10px;
+  margin: 0;
   position: relative;
   padding: 5px 0;
   border-bottom: 1px dotted;
