familyInfo style updates

--- a/client/src/css/components/imageInfo.css
+++ b/client/src/css/components/imageInfo.css
@@ -71,6 +71,13 @@
   width: 200px;
   border-bottom: 1px solid;
   height: 22px;
+  background-color: rgba(0, 0, 0, 0.055);
+}
+
+.themes-list--selected {
+  background-color: #c9eec9 !important;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 .themes-span {
