--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -60,7 +60,8 @@ p{
     margin: 0 !important;
 }
 .no-padding{
-    padding: 0;
+    padding: 10px;
+    background-color: rgba(0,0,0,.055);
 }
 Button{
     margin-top: 3px;
