--- a/client/src/components/DragAndDropList/css/imageInfo.scss
+++ b/client/src/components/DragAndDropList/css/imageInfo.scss
@@ -52,6 +52,7 @@
     width: 200px;
     border-bottom: 1px solid;
     height: 22px;
+    background-color: rgba(0,0,0,.055);
 }
 .themes-span{
     position: absolute;
