--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -120,4 +120,23 @@ Button {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
+
+.accordion-main {
+  padding: 2px 0 2px 15px;
+  font-size: 18px;
+}
+
+.accordion-secondary {
+  padding: 2px 0 2px 7px;
+  font-size: 14px;
+}
+
+.card-header {
+  margin-bottom: 0 !important;
+}
+
+textarea {
+  font-size: 13px;
+  padding: 15px;
+}
 /*# sourceMappingURL=main.css.map */
