--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -18,7 +18,7 @@ ul{
     max-width: none !important;
     margin: 0 !important;
     padding: 0 !important;
-    display: grid;
+    // display: grid;
     grid-template-columns: 1fr 300px;
     grid-template-rows: auto 1fr;
 }
