--- a/client/src/components/DragAndDropList/css/jsonPreview.css
+++ b/client/src/components/DragAndDropList/css/jsonPreview.css
@@ -8,6 +8,10 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   border: 1px solid;
 }
 
