--- a/client/src/components/DragAndDropList/css/ImagesPreview.css
+++ b/client/src/components/DragAndDropList/css/ImagesPreview.css
@@ -82,7 +82,7 @@
 
 .custom-button {
   height: 30px;
-  width: 100%;
+  width: 180px;
   text-align: center;
   font-size: 14px;
   font-weight: bold;
@@ -91,11 +91,13 @@
   border: 2px solid #9e9e9e;
   text-transform: uppercase;
   background-color: #d1d1d1;
+  margin: 4px 0;
 }
 
 .ImagesPreview--dragHandle {
   background-color: yellow;
   border: 1px solid black;
+  width: 50px;
 }
 
 .mouseDown {
@@ -115,6 +117,9 @@
 
 .image-index-box {
   padding: 0 10px;
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
 }
 
 .accordion-container {
@@ -129,13 +134,24 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-left: 5px;
+  padding: 10px 15px;
+  background-color: #d6d6d6;
+  border-radius: 5px;
+}
+
+.submit-delete-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 /*# sourceMappingURL=ImagesPreview.css.map */
