--- a/client/src/components/DragAndDropList/css/ImagesPreview.scss
+++ b/client/src/components/DragAndDropList/css/ImagesPreview.scss
@@ -78,7 +78,8 @@
     width: 100%;
 }
 .card-body{
-    padding: 0;
+    padding: 10px;
+    background-color: rgb(241, 241, 241);
 }
 .image-index-box{
     padding: 0 10px;
