--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -77,8 +77,9 @@ p {
 }
 
 .no-padding {
-  padding: 10px;
+  padding: 0 !important;
   background-color: rgba(0, 0, 0, 0.055);
+  margin-bottom: 0 !important;
 }
 
 Button {
