improved fileUpdate component, no dublicate files

--- a/client/src/css/components/navigationInfo.css
+++ b/client/src/css/components/navigationInfo.css
@@ -62,4 +62,10 @@
           flex: 1;
   border: 1px solid #e2e2e2;
 }
+
+.list-group-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
 /*# sourceMappingURL=navigationInfo.css.map */
