--- a/client/src/components/DragAndDropList/css/ImagesPreview.css
+++ b/client/src/components/DragAndDropList/css/ImagesPreview.css
@@ -36,7 +36,11 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 200px;
+  height: 140px;
 }
 
 .ImagesPreview--fileName {
