--- a/client/src/components/DragAndDropList/css/ImagesPreview.scss
+++ b/client/src/components/DragAndDropList/css/ImagesPreview.scss
@@ -17,7 +17,10 @@
 .ImagesPreview--imageContainer{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 200px;
+    height: 140px;
+
 }
 .ImagesPreview--fileName{
     width: 100%;
