updateFamilySetup, seeAlso component

--- a/client/src/components/DragAndDropList/css/ImagesPreview.css
+++ b/client/src/components/DragAndDropList/css/ImagesPreview.css
@@ -36,9 +36,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
   width: 200px;
   height: 140px;
 }
@@ -53,11 +53,10 @@
 }
 
 .ImagesPreview--image {
-  width: 100%;
+  width: calc(100% - 2px);
   max-height: 120px;
   -o-object-fit: contain;
      object-fit: contain;
-  border: 1px solid;
   border-bottom: none;
   background-color: #fcfcfc;
 }
