--- a/client/src/css/components/imageInfo.scss
+++ b/client/src/css/components/imageInfo.scss
@@ -84,7 +84,7 @@
     max-width: 915px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    // justify-content: space-between;
 }
 .familyInfo-container{
     display: flex;
