--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -107,3 +107,53 @@ textarea{
     background-color: #c9eec9 !important;
     transition: all 0.2s;
 }
+.FamilyList--container{
+    width: 100%;
+    display: flex;
+    border: 1px solid;
+    margin: 3px 0;
+}
+.FamilyList--familyName{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    margin-bottom: 2vw;
+}
+.FamilyList--familyName__text{
+    color: white;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 0;
+}
+.FamilyList--main{
+    border: 5px solid !important;
+    padding: 0 !important;
+    margin: 0;
+    width: auto !important;
+}
+.FamilyList--detail{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    border: 1px solid;
+    margin: 3px 2vw;
+}
+.FamilyList--detail__info{
+    padding: 4px;
+    flex: 1;
+}
+.FamilyList--detail__image{
+    padding: 4px;
+    width: 200px;
+    border-right: 1px solid rgb(175, 175, 175);
+}
+.FamilyList--detail__image__text{
+    margin: 4px 2px;
+    font-size: 12px;
+    border: 1px solid rgb(175, 175, 175);
+    padding: 4px;
+}
+.title{
+    font-weight: 600;
+}
