--- a/client/src/components/DragAndDropList/css/ImagesPreview.css
+++ b/client/src/components/DragAndDropList/css/ImagesPreview.css
@@ -39,8 +39,6 @@
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: end;
-  width: 200px;
-  height: 140px;
 }
 
 .ImagesPreview--fileName {
@@ -85,7 +83,7 @@
 
 .custom-button {
   height: 30px;
-  width: 180px;
+  max-width: 180px;
   text-align: center;
   font-size: 14px;
   font-weight: bold;
