--- a/client/src/components/DragAndDropList/css/ImagesPreview.scss
+++ b/client/src/components/DragAndDropList/css/ImagesPreview.scss
@@ -18,8 +18,8 @@
     display: flex;
     flex-direction: column;
     justify-content: end;
-    width: 200px;
-    height: 140px;
+    // width: 200px;
+    // height: 140px;
 
 }
 .ImagesPreview--fileName{
@@ -54,7 +54,7 @@
 }
 .custom-button{
         height: 30px; 
-        width: 180px;;
+        max-width: 180px;;
         text-align: center;
         font-size: 14px;
         font-weight: bold;
