--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -187,7 +187,10 @@ textarea {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   border: 1px solid;
-  margin: 3px 2vw;
+  margin: 3px 5px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .FamilyList--detail__info {
@@ -195,12 +198,19 @@ textarea {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-left: 1px solid #afafaf;
 }
 
 .FamilyList--detail__image {
   padding: 4px;
   width: 200px;
-  border-right: 1px solid #afafaf;
 }
 
 .FamilyList--detail__image__text {
@@ -212,5 +222,32 @@ textarea {
 
 .title {
   font-weight: 600;
+}
+
+.FamilyList--submit-delete-container {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+h3 {
+  margin-bottom: 2vw;
+  text-transform: uppercase;
+  font-weight: 600 !important;
+  font-size: 1.45vw !important;
+}
+
+h5 {
+  font-weight: 600 !important;
+  font-size: 1.25vw !important;
 }
 /*# sourceMappingURL=main.css.map */
