--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -57,6 +57,10 @@ form{
 
 p{
     margin: 0 !important;
+    word-wrap:break-word;
+}
+img{
+    font-size: 8px;
 }
 .no-padding{
     padding: 0 !important;
