--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -29,6 +29,13 @@ ul {
 .data-container {
   overflow-y: scroll;
   height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 h3 {
@@ -185,7 +192,9 @@ textarea {
 }
 
 .FamilyList--detail {
-  width: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
