--- a/client/src/css/components/imageInfo.css
+++ b/client/src/css/components/imageInfo.css
@@ -87,7 +87,6 @@
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  max-width: 915px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -103,5 +102,9 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 /*# sourceMappingURL=imageInfo.css.map */
