--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -192,9 +192,7 @@ textarea {
 }
 
 .FamilyList--detail {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -320,5 +318,20 @@ label {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.FamilyList--detail_update {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100%;
+  margin: 15px 0 0 0;
+  border: 1px solid #afafaf;
 }
 /*# sourceMappingURL=main.css.map */
