--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -139,7 +139,7 @@ textarea{
     width: auto !important;
 }
 .FamilyList--detail{
-    flex: 1;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     border: 1px solid;
@@ -215,4 +215,13 @@ label{
     width: 50px;
     height: 40px;
     align-items: center;
+}
+.FamilyList--detail_update{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    height: 100%;
+    margin: 15px 0 0 0 ;
+    border: 1px solid #afafaf;
 }
