--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -174,14 +174,15 @@ textarea{
     align-items: flex-end;
 }
 h3{
-    margin-bottom: 2vw;
+    margin-bottom: calc(16px + 0.75vw);
     text-transform: uppercase;
     font-weight: 600 !important;
-    font-size: 1.45vw !important;
+    font-size: calc(12px + 0.75vw) !important;
 }
 h5{
     font-weight: 600 !important;
-    font-size: 1.25vw !important;
+    font-size: calc(12px + 0.75vw) !important;
+    padding-bottom: 5px;
 }
 label{
     margin: 0 !important;
