--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -23,10 +23,16 @@ ul{
     grid-template-rows: auto 1fr;
 }
 .data-container{
-    overflow-y: scroll;
+    overflow: hidden;
     height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
+}
+.overflow-yes{
+    overflow-x: hidden;
+    overflow-y: auto;
+    width: 100%;
 }
 
 h3{
