--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -342,4 +342,28 @@ label {
   margin: 15px 0 0 0;
   border: 1px solid #afafaf;
 }
+
+.frontEndIndex-container {
+  height: 100vh;
+  width: 100vw;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto auto;
+      grid-template-columns: auto auto;
+  border: 2px solid blue;
+}
+
+.imageSelect-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  overflow-y: auto;
+  border: 2px solid lime;
+}
+
+.imageSelect-FilePreview {
+  height: 30vh;
+}
 /*# sourceMappingURL=main.css.map */
