--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -232,3 +232,21 @@ label{
     margin: 15px 0 0 0 ;
     border: 1px solid #afafaf;
 }
+
+//FRONT END
+.frontEndIndex-container{
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: auto auto;
+    border: 2px solid blue;
+}
+.imageSelect-container{
+    display: flex;
+    flex-wrap: wrap;
+    overflow-y: auto;
+    border: 2px solid lime;
+}
+.imageSelect-FilePreview{
+    height: 30vh;
+}
