--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -250,3 +250,7 @@ label{
 .imageSelect-FilePreview{
     height: 30vh;
 }
+.TagsMenu-Accordion-label{
+    display: flex !important;
+    justify-content: space-between !important;
+}
