--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -375,4 +375,46 @@ label {
       -ms-flex-pack: justify !important;
           justify-content: space-between !important;
 }
+
+@-webkit-keyframes modalFade {
+  0% {
+    opacity: 1;
+    z-index: 9999;
+    display: -webkit-box;
+    display: flex;
+  }
+  90% {
+    opacity: 0;
+  }
+  100% {
+    display: none;
+  }
+}
+
+@keyframes modalFade {
+  0% {
+    opacity: 1;
+    z-index: 9999;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  90% {
+    opacity: 0;
+  }
+  100% {
+    display: none;
+  }
+}
+
+.modalOff {
+  -webkit-animation-name: modalFade;
+          animation-name: modalFade;
+  -webkit-animation-duration: 0.6s;
+          animation-duration: 0.6s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-direction: forwards;
+          animation-direction: forwards;
+}
 /*# sourceMappingURL=main.css.map */
