--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -254,3 +254,22 @@ label{
     display: flex !important;
     justify-content: space-between !important;
 }
+@keyframes modalFade {
+    0% {
+      opacity: 1;
+      z-index: 9999;
+      display: flex;
+    }
+    90% {
+      opacity: 0;
+    }
+    100% {
+        display: none;
+    }
+  }
+.modalOff{
+    animation-name: modalFade;
+    animation-duration: 0.6s;
+    animation-fill-mode: forwards;
+    animation-direction: forwards;
+}
