--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -237,13 +237,14 @@ label{
 //------------
 //TAGS MENU
 //------------
+$frame-color: black;
 
 .TagsMenu-container{
     width: 250px;
-    background-color: blue;
+    background-color: $frame-color;
 }
 .TagsMenu-Card{
-    background-color: blue !important;
+    background-color: $frame-color !important;
 }
 .tagsMenu-Button_category{
     padding: 0 !important;
@@ -259,13 +260,16 @@ label{
     font-weight: 600 !important;
     color: white !important;
 }
+.NavBar{
+    background-color: $frame-color;
+}
 
 .frontEndIndex-container{
     height: 100vh;
     width: 100vw;
     display: grid;
     grid-template-columns: max-content minmax(100px, 1fr) minmax(auto, max-content);
-    border: 4vw solid blue;
+    border: 4vw solid $frame-color;
     border-left: 0;
 }
 .imageSelect-container{
